# vectorbt

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  Demo.ipynb  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  Modules.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  app.py  base.ipynb  example.ipynb  generic.ipynb  indicators.ipynb  pipeline.yaml  portfolio.ipynb  postBuild  pypi.sh  pyproject.toml  pytest.ini  records.ipynb  returns.ipynb  setup.py  signals.ipynb  tests.ipynb  timeseries.ipynb  utils.ipynb  widgets.ipynb
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  docker.yml  docs.yml  pypi.yml  python-publish.yml  scorecard.yml  stale_workflow.yml  tests.yml
.ipynb_checkpoints/: example-checkpoint.ipynb
apps/candlestick-patterns/: Dockerfile  README.md  app.py  requirements.txt
assets/: style.css
benchmarks/: BENCHMARKS.md  BENCHMARKS_NUMBA.md  BENCHMARKS_RUST.md  README.md  bench_backend.py  bench_engine.py  bench_matrix.py
docs/: README.md  generate_api.py  generate_nav_from_api.py  index.html  mkdocs.yml  update_api_nav.py
docs/docs/: CNAME  context7.json  documentation.md  index.md  vectorbt-pro.md
docs/overrides/: main.html
docs/site/: index.html
docs/templates/: config.mako  css.mako  head.mako  html.mako  logo.mako  markdown.mako
docs/vectorbt/: index.html  indicators.html  portfolio.html  utils.html  widgets.html
eval_data/: ohlcv_sample.csv
examples/: AdanosSentimentResearch.ipynb  Bitcoin-DMAC.ipynb  Bitcoin_DMAC.ipynb  DMAC.ipynb  JaxBenchmarks.ipynb  PairsTrading-vectorbt-only.py  PairsTrading.ipynb  PortfolioOptimization.ipynb  PortingBTStrategy.ipynb  StopLoss-vs-TrailingStop.ipynb  StopLoss.ipynb  StopSignals.ipynb  TelegramSignals.ipynb  TelegramUpdates.ipynb  Trading-Sessions.ipynb  TradingSessions.ipynb  WalkForwardOptimization.ipynb  data_split.py  dmac_live.py  leaky_strategy.py  metrics_report.py  requirements-backtrader.txt  requirements.txt  safe_optimizer.py  trading_costs.py  walk_forward.py
html/vectorbt/: accessors.html  signals.html  timeseries.html
mytrial/: dmac_example.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: generic.rs  indicators.rs  labels.rs  lib.rs  portfolio.rs  records.rs  returns.rs  signals.rs
scripts/: docker-push.sh  install-lab-plotly.sh  install-labextensions.sh  install-talib.sh  install.sh  upload.sh
tests/: Modules.ipynb  Numba_functions.ipynb  Tests.ipynb  base.ipynb  conftest.py  indicators.ipynb  portfolio.ipynb  records.ipynb  returns.ipynb  signals.ipynb  test_backend.py  test_base.py  test_bench_matrix.py  test_cat.py  test_data.py  test_engine.py  test_fxmacrodata_data.py  test_generic.py  test_indicators.py  test_labels.py  test_leakage_detection.py  test_metrics_report.py  test_plotting.py  test_plotting_backend.py  test_plotting_protocol.py  test_plotting_renderer.py  test_portfolio.py  test_portfolio_walk_forward.py  test_records.py  test_returns.py  test_safe_optimizer.py  test_settings.py  test_signals.py  test_tseries.py  test_utils.py  test_walk_forward.py  timeseries.ipynb  tseries.ipynb  utils.ipynb  utils.py  (+1 more)
tests/notebooks/: base.ipynb  generic.ipynb  indicators.ipynb  labels.ipynb  ohlcv.ipynb  plotting.ipynb  portfolio.ipynb  records.ipynb  returns.ipynb  shortcash.ipynb  signals.ipynb  tseries.ipynb  utils.ipynb
vectorbt/: __init__.py  _backend.py  _engine.py  _settings.py  _typing.py  _version.py  accessors.py  array.py  cat_accessors.py  data.py  decorators.py  defaults.py  enums.py  equity.py  graphics.py  indicators.py  kpi.py  ohlcv.py  ohlcv_accessors.py  performance.py  portfolio.py  positions.py  px_accessors.py  returns.py  root_accessors.py  settings.py  signals.py  strategy.py  test.md  timeseries.py  typing.py  utils.py  vector.py  widgets.py
vectorbt/base/: __init__.py  accessors.py  array_wrapper.py  class_helpers.py  column_grouper.py  combine_fns.py  common.py  decorators.py  index_fns.py  index_grouper.py  indexing.py  plotting.py  reshape_fns.py
vectorbt/data/: __init__.py  base.py  custom.py  updater.py
vectorbt/examples/: leaky_strategy.py
vectorbt/generic/: __init__.py  accessors.py  decorators.py  dispatch.py  drawdowns.py  enums.py  nb.py  plot_builder.py  plots_builder.py  plotting.py  ranges.py  splitters.py  stats_builder.py
vectorbt/indicators/: __init__.py  atr.py  basic.py  bollinger_bands.py  configs.py  dispatch.py  factory.py  indicator_factory.py  indicators.py  ma.py  macd.py  mstd.py  nb.py  obv.py  rsi.py  stochastic.py
vectorbt/labels/: __init__.py  basic.py  dispatch.py  enums.py  generators.py  nb.py
vectorbt/messaging/: __init__.py  telegram.py
vectorbt/ohlcv/: __init__.py  accessors.py
vectorbt/optimizer/: __init__.py
vectorbt/portfolio/: __init__.py  base.py  common.py  const.py  decorators.py  dispatch.py  enums.py  events.py  logs.py  main.py  nb.py  orders.py  portfolio.py  positions.py  props.py  records.py  trades.py
vectorbt/records/: __init__.py  base.py  col_mapper.py  common.py  decorators.py  dispatch.py  drawdowns.py  enums.py  events.py  logs.py  main.py  mapped_array.py  nb.py  orders.py
vectorbt/returns/: __init__.py  accessors.py  dispatch.py  metrics.py  nb.py  qs_adapter.py
vectorbt/signals/: __init__.py  accessors.py  basic.py  dispatch.py  enums.py  factory.py  generators.py  nb.py
vectorbt/templates/: dark.json  light.json  seaborn.json
vectorbt/timeseries/: __init__.py  accessors.py  common.py  nb.py
vectorbt/tseries/: __init__.py  accessors.py  common.py  nb.py
vectorbt/utils/: __init__.py  accessors.py  array.py  array_.py  array_wrapper.py  attr.py  attr_.py  checks.py  colors.py  combine.py  combine_fns.py  common.py  config.py  data.py  datetime.py  datetime_.py  decorators.py  docs.py  enum.py  enum_.py  figure.py  image.py  image_.py  index_fns.py  indexes.py  indexing.py  mapping.py  math.py  math_.py  messaging.py  module.py  module_.py  params.py  pdoc.py  plot.py  plotting_protocol.py  random.py  random_.py  requests.py  requests_.py  (+8 more)
vectorbt/widgets/: __init__.py  accessors.py  basic.py  common.py  (+1 more)
(+33 files in other folders)
