[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vectorbt-rust"
version = "1.0.0"
description = "Rust-accelerated kernels for vectorbt"
license = {text = "Apache-2.0 WITH Commons-Clause-1.0"}
authors = [
    {name = "Oleg Polakow", email = "olegpolakow@vectorbt.pro"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/polakowo/vectorbt"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "vectorbt_rust"
